--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+:root {
+    --white: hsl(0, 0%, 100%);
+    --black: hsl(0, 0%, 0%);
+    --dark-gray: hsl(0, 0%, 55%);
+    --very-dark-gray: hsl(0, 0%, 41%);
+  }
 a {
     text-decoration: none;
 }
 body {
+    font-family: 'Alata', sans-serif;
     font-size: 100%;
 }
 nav {
