--- a/style.css
+++ b/style.css
@@ -11,44 +11,50 @@
 a {
   text-decoration: none;
 }
-body {
-  font-family: 'Alata', sans-serif;
+html {
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 100%;
+  line-height: 1.2;
+}
+body {
+  font-size: 15px;
 }
 header {
   background: no-repeat url('./images/desktop/image-hero.jpg');
   height: 650px;
 }
 nav {
+  font-family: 'Alata', sans-serif;
   display: flex;
   align-items: center;
 }
 nav a {
   color: var(--white);
 }
+
 .description {
-  background: no-repeat url('./images/desktop/image-interactive.jpg');
-  position: relative;
-  max-width: 650px;
-  max-height: 500px;
-  /* margin: 160px; */
-  object-fit: cover;
-}
-.description-text {
   background: var(--white);
   max-width: 650px;
   max-height: 500px;
-  /* transform: translate(500px, 10px) */
-  /* position: absolute; */
+  position: absolute;
+  left: 735px;
+  top: 340px;
+  padding: 95px 5px 95px 95px;
+}
+.description h2 {
+  font-size: 37px;
+  margin-bottom: 43px;
 }
 .headline {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 500px;
+  grid-template-rows: 680px;
+  padding: 160px;
+  position: relative;
 }
 .hero {
   padding: 35px 45px;
-  font-family: 'Josefin Sans', sans-serif;
+
   color: var(--white);
   border: 2px solid var(--white);
   width: 650px;
