--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ nav a {
   font-size: 37px;
   margin-bottom: 43px;
 }
+.desc-image {
+  max-width: 100%;
+  height: auto;
+  /* width: 100%; */
+  /* object-fit: cover; */
+}
 .headline {
   display: grid;
   grid-template-columns: 1fr;
@@ -66,4 +72,12 @@ nav a {
 .nav {
   position: absolute;
   right: 0;
+}
+@media (max-width: 1130px) {
+  .description {
+    left: 535px;
+    top: 440px;
+    padding: 95px 5px 0px 95px;
+    height: fit-content;
+  }
 }
